examples/c/negative/duplicate_variable.pc
int main() { int value; int value; return 0; }
